--- a/src/tumblr/circuit/TODO
+++ b/src/tumblr/circuit/TODO
@@ -1,4 +1,9 @@
-binary name duplicated in both install and build configs
++binary name duplicated in both install and build configs
++move build config elsewhere and build tools should not rely on boot
++same for install
+*build and install one config
+
++remove dependence on util/posix
 
 spam issue track deployment
 profiler
