config: demultiplex source of configuration based on execution context

--- a/src/tumblr/circuit/TODO
+++ b/src/tumblr/circuit/TODO
@@ -2,6 +2,7 @@ spam issue track deployment
 4cpu
 
 ??? tool to fetch out/err of successfully-started runtimes
+4doc
 ____________________________________________________
 
 4lsof (list registered listeners, etc. resources)
