--- a/src/tumblr/circuit/TODO
+++ b/src/tumblr/circuit/TODO
@@ -18,6 +18,12 @@ OPEN-SOURCE
 manual
 godoc online
 
+fix 4crossbuild incremental printout of subordinate stderr (same for n.Spawn)
+	there is some print race condition in 4crossbuild
+
+TUMBLR/config is only needed in main role (maybe mechanism badly designed)
+	also, should it guess regime (air/ewr) from circuit's config?
+
 __________________________________________
 POST OPEN-SOURCE
 
