add rsync repos to facilitate debugging/iterating locally

--- a/src/circuit/TODO
+++ b/src/circuit/TODO
@@ -1,3 +1,11 @@
+seems that monitor's connection to postfilter is what kills both
+	why is postfilter dying after incoming request form monitor
+		symptom: on second ping from monitor, postfilter dies
+		why is monitoring re-dialing the tcp connection for the second try?
+		why is not the second accept not handled well in postfilter's core
+
+monitor func should daemonize
+
 spam issue track deployment
 4cpu
 4doc
