tweak in 4clear

--- a/src/circuit/TODO
+++ b/src/circuit/TODO
@@ -1,6 +1,7 @@
 4crossbuild does not relay stderr when caused by exit error
+changing binary names in build config results in building old names as well
+4clear does not seem to remove zombie jails
 
-4clear
 4tail
 4cpu
 4doc
