bug fix trend tutorial

--- a/src/circuit/TODO
+++ b/src/circuit/TODO
@@ -1,6 +1,8 @@
+4build: if build config changes, automatically clear affected temp files (save build config prior to build in build jail)
+4build: rsync method should not fetch object files, repo special files, executables, etc.
+
 tumblr app structure
 4out, 4err
-
 4tail
 4doc
 ____________________________________________________
