--- a/src/circuit/TODO
+++ b/src/circuit/TODO
@@ -1,10 +1,19 @@
 tumblr app structure
 	not seeing greeting message "using tumblr env ..."
 	not seeing jail for postfilter sometimes
+update circuit's firehose driver
 
 4jailcat
 4jailtail
 4doc
+
+Ref -> XVal (ExportValue)?
+RefFile -> XFile (ExportFile)?
+____________________________________________________
+CAVEAT:
+When passing a slice in an x-call, changes to the underlying array at the callee 
+will not be reflected at the called.
+Similarly for maps.
 ____________________________________________________
 topic-specific subscriptions
 4lsof (list registered listeners, etc. resources) and also dup the lsof of the unix process
