improvements in 4stat

--- a/src/circuit/TODO
+++ b/src/circuit/TODO
@@ -3,6 +3,7 @@ tumblr app structure
 	not seeing jail for postfilter sometimes
 
 update circuit's firehose driver
+	move to kit/tumblr/firehose
 	test firehose driver for correct reconnects
 
 4stat does not know the types of remote services, so can't import handles
