--- a/src/circuit/TODO
+++ b/src/circuit/TODO
@@ -6,7 +6,8 @@ update circuit's firehose driver
 	move to kit/tumblr/firehose
 	test firehose driver for correct reconnects
 
-4stat does not know the types of remote services, so can't import handles
+errors.errorString not registered
+
 pass slice and map
 
 Ref -> Tele XVal (ExportValue)?
