add test for cross-worker garbage collection, first draft

--- a/src/circuit/TODO
+++ b/src/circuit/TODO
@@ -1,3 +1,6 @@
+CONFIG FRICTION:
+	circuit configs are user specific since they contain hardcoded absolute paths
+------------------------------------------
 Ref -> Tele XVal (ExportValue)?
 
 4clear:
