--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,8 @@
 # This is the official list of circuit authors.
 # Names should be added to this file as
 #	Name or Organization <email address>
-# The email address is not required for organizations.
 # Please keep the list sorted.
 
+
+# Initial author
 Petar Maymounkov <petarm@gmail.com>
